--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,76 @@
-# requirements.txt
-flask
-firebase_admin
-firebase
+appdirs==1.4.4
+astroid==2.5.2
+autopep8==1.5.6
+black==20.8b1
+CacheControl==0.12.6
+cachetools==4.2.1
+certifi==2020.12.5
+cffi==1.14.5
+cfgv==3.2.0
+chardet==4.0.0
+click==7.1.2
+coverage==5.5
+distlib==0.3.1
+filelock==3.0.12
+firebase==3.0.1
+firebase-admin==4.5.3
+Flask==1.1.2
+Flask-Cors==3.0.10
+google-api-core==1.26.3
+google-api-python-client==2.2.0
+google-auth==1.29.0
+google-auth-httplib2==0.1.0
+google-cloud-core==1.6.0
+google-cloud-firestore==2.1.0
+google-cloud-storage==1.37.1
+google-crc32c==1.1.2
+google-resumable-media==1.2.0
+googleapis-common-protos==1.53.0
+grpcio==1.37.0
+httplib2==0.19.1
+identify==2.2.2
+idna==2.10
+isort==5.8.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+lazy-object-proxy==1.6.0
+llvmlite==0.36.0
+MarkupSafe==1.1.1
+mccabe==0.6.1
+msgpack==1.0.2
+mypy-extensions==0.4.3
+nodeenv==1.5.0
+numba==0.53.1
+numpy==1.20.2
+packaging==20.9
+pandas==1.2.3
+pathspec==0.8.1
+patsy==0.5.1
+pre-commit==2.12.0
+proto-plus==1.18.1
+protobuf==3.15.8
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.7.0
+pycparser==2.20
+pylint==2.7.4
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
+PyYAML==5.4.1
+regex==2021.4.4
+requests==2.25.1
+rpy2==3.4.3
+rsa==4.7.2
+scipy==1.6.2
+six==1.15.0
+statsmodels==0.12.2
+toml==0.10.2
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+tzlocal==2.1
+uritemplate==3.0.1
+urllib3==1.26.4
+virtualenv==20.4.3
+Werkzeug==1.0.1
+wrapt==1.12.1
