--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "manifest_version": 1,
+    "manifest_version": 2,
     "name": "CareerArchitech",
     "version": "1.0",
     "content_scripts": [
@@ -7,7 +7,7 @@
             "matches": [
                 "<all_urls>"
             ],
-            "js": []
+            "js": ["extension/content.js"]
         }
     ],
     "background": {
