--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ google-auth==1.29.0
 google-auth-httplib2==0.1.0
 google-cloud-core==1.6.0
 google-cloud-firestore==2.1.0
+google-cloud-language==2.0.0
 google-cloud-storage==1.37.1
 google-crc32c==1.1.2
 google-resumable-media==1.2.0
@@ -34,6 +35,7 @@ isort==5.8.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
 lazy-object-proxy==1.6.0
+libcst==0.3.18
 llvmlite==0.36.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
@@ -68,6 +70,7 @@ statsmodels==0.12.2
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
+typing-inspect==0.6.0
 tzlocal==2.1
 uritemplate==3.0.1
 urllib3==1.26.4
