--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ google-auth-httplib2==0.1.0
 google-cloud-core==1.6.0
 google-cloud-firestore==2.1.0
 google-cloud-language==2.0.0
+google-cloud-speech==2.3.0
 google-cloud-storage==1.37.1
 google-crc32c==1.1.2
 google-resumable-media==1.2.0
