--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
         "scripts": ["extension/background.js"]
     },
     "browser_action": {
-        "default_icon": "extension/icon.png",
+        "default_icon": "extension/archi.png",
         "default_popup": "extension/popup.html"
     },
     "permissions": ["activeTab", "tabs"]
